# ha-eisenberg

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  hacs.json  pyproject.toml
.claude/skills/eisenberg-deploy/: SKILL.md
.claude/skills/eisenberg-issue-watch/: SKILL.md
.claude/skills/eisenberg-release/: SKILL.md
.github/workflows/: ci.yml
custom_components/eisenberg/: __init__.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  light.py  manifest.json  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/eisenberg/translations/: en.json
docs/plans/: 2026-04-05-eisenberg-implementation.md
docs/specs/: 2026-04-05-eisenberg-design.md  2026-06-27-per-location-modes-and-suback-observability-design.md
eisenberg/: __init__.py  client.py  exceptions.py  models.py  mqtt.py  mqtt_codec.py
scripts/: check.sh  debug_email_mfa.py  debug_login.py
tests/: conftest.py  test_basestation_connectivity.py  test_binary_sensor.py  test_button.py  test_camera.py  test_client_auth.py  test_client_commands.py  test_client_locations.py  test_config_flow.py  test_coordinator_cameras.py  test_coordinator_locations.py  test_coordinator_modes.py  test_coordinator_snapshots.py  test_exceptions.py  test_models.py  test_mqtt.py  test_mqtt_codec.py  test_select.py
